force-app/main/default/objects/OpportunityLineItem/fields/Imerys_Manufacturing_Plants__c.field-meta.xml
<CustomField>
    <fullName>Imerys_Manufacturing_Plants__c</fullName>
    <formula>PricebookEntry.Product2.ImerysManufacturingPlant__r.Name</formula>
    <label>Imerys Manufacturing Plants</label>
    <type>Text</type>
</CustomField>