force-app/main/default/objects/OpportunityLineItem/fields/Manufacturing_Plant__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturing Plant</label>
    <referenceTo>Manufacturing_Plant__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>