force-app/main/default/objects/OpportunityLineItem/fields/ProductForm__c.field-meta.xml
<CustomField>
    <fullName>ProductForm__c</fullName>
    <label>Product Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Form</valueSetName>
    </valueSet>
</CustomField>