force-app/main/default/objects/OpportunityLineItem/fields/Technical_Status__c.field-meta.xml
<CustomField>
    <fullName>Technical_Status__c</fullName>
    <label>Technical Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TechnicalStatus</valueSetName>
    </valueSet>
</CustomField>